<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="24dp"
            android:text="@string/reglas_parrafo1"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/komika"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reglas_parrafo2"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingBottom="12dp"
            android:fontFamily="@font/komika"/>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reglas_parrafo4"
            android:textSize="18sp"
            android:textAlignment="center"
            android:paddingBottom="12dp"
            android:fontFamily="@font/komika"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reglas_parrafo5"
            android:textSize="20sp"
            android:textAlignment="center"
            android:paddingBottom="12dp"
            android:fontFamily="@font/komika"/>
    </LinearLayout>
</ScrollView>
