<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.ajustesFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/ajustesSubtitle"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:gravity="center"

            android:layout_marginTop="16dp"

            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/ajustes_subtitle"
            android:textAlignment="center"
            android:fontFamily="@font/komika"/>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/ajustesSubtitle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioManga"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:theme="@style/CustomRadioButtonTheme"
                android:checked="true"
                android:fontFamily="@font/komika"
                android:textSize="20sp"
                android:text="@string/ajustes_select_manga" />

            <!-- TODO: Disabled for now -->
            <RadioButton
                android:id="@+id/radioAnime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:theme="@style/CustomRadioButtonTheme"
                android:clickable="false"
                android:fontFamily="@font/komika"
                android:textSize="20sp"
                android:text="@string/ajustes_select_anime" />
        </RadioGroup>

        <TextView
            android:id="@+id/hintTextChapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/radioGroup"

            android:text="@string/ajustes_max_cap_text"
            android:textSize="16sp"
            android:fontFamily="@font/komika" />

        <EditText
            android:id="@+id/textChapter"
            android:layout_width="150dp"
            android:layout_height="wrap_content"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/hintTextChapter"

            android:ems="10"
            android:inputType="number"
            android:text="@string/ajustes_max_cap_default"
            android:textAlignment="center"
            android:textSize="20sp"
            android:fontFamily="@font/komika"/>

        <TextView
            android:id="@+id/textHintDifficult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textChapter"

            android:text="@string/ajustes_difficult_text"
            android:textSize="16sp"
            android:fontFamily="@font/komika"
            android:textAlignment="center"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"

            app:layout_constraintTop_toBottomOf="@+id/textHintDifficult"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:orientation="horizontal"
            >

            <CheckBox
                android:id="@+id/boxEasy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="#F44336"
                android:checked="true"
                android:text="@string/ajustes_difficult_easy"
                android:fontFamily="@font/komika"/>

            <CheckBox
                android:id="@+id/boxMedium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"

                android:buttonTint="#F44336"
                android:checked="true"
                android:text="@string/ajustes_difficult_medium"
                android:fontFamily="@font/komika"/>

            <CheckBox
                android:id="@+id/boxHard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:buttonTint="#F44336"
                android:checked="true"
                android:text="@string/ajustes_difficult_hard"
                android:fontFamily="@font/komika" />
        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>