<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="24dp"
    android:background="@color/white">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textColor="@color/wanted_text"
        android:layout_marginBottom="32dp"

        android:text="@string/main_title"
        android:textSize="40sp"
        android:fontFamily="@font/caslon_antique_bold"
        android:textAlignment="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="12dp"
        android:textSize="16sp"
        android:textColor="@color/wanted_text"
        android:background="@color/gray"

        android:text="@string/login_subtitle_1"
        android:textAlignment="center"


        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/emailInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_email_hint"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/red"
        app:hintTextColor="@color/red"
        android:layout_marginBottom="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/emailEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/passwordInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login_password_hint"
        app:boxBackgroundMode="outline"
        app:boxStrokeColor="@color/red"
        app:hintTextColor="@color/red"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/red"
        android:layout_marginBottom="24dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:textCursorDrawable="@null"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="16sp"
        android:layout_marginBottom="12dp"

        android:backgroundTint="@color/red"
        android:textColor="@color/white"
        />

    <Button
        android:id="@+id/registerButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/white"
        android:text="@string/login_register"

        android:textColor="@color/red"
        android:textSize="16sp"
        app:strokeColor="@color/red"
        app:strokeWidth="1dp" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:indeterminateTint="@color/red"
        android:visibility="gone"/>
</LinearLayout>