<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:context=".menu.jugadoresFragment">

        <TextView
            android:id="@+id/textHint_n_players"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/jugadores_number_text"
            android:fontFamily="@font/komika"
            app:layout_constraintTop_toTopOf="parent" />

        <SeekBar
            android:id="@+id/seekBarPlayers"
            style="@style/Widget.AppCompat.SeekBar.Discrete"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:max="3"
            android:progress="1"
            android:progressTint="#BD362C"
            android:thumbTint="#F44336"
            app:layout_constraintTop_toBottomOf="@+id/textHint_n_players" />

        <TextView
            android:id="@+id/textView6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:text="@string/jugadores_name_text"
            android:fontFamily="@font/komika"
            app:layout_constraintTop_toBottomOf="@+id/seekBarPlayers"
            tools:layout_editor_absoluteX="0dp" />

        <EditText
            android:id="@+id/textJ1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="16"
            android:text="@string/j1_default"
            android:fontFamily="@font/komika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView6" />

        <EditText
            android:id="@+id/textJ2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="16"
            android:text="@string/j2_default"
            android:fontFamily="@font/komika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textJ1" />

        <EditText
            android:id="@+id/textJ3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="16"
            android:text="@string/j3_default"
            android:fontFamily="@font/komika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textJ2" />

        <EditText
            android:id="@+id/textJ4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="text"
            android:maxLength="16"
            android:text="@string/j4_default"
            android:fontFamily="@font/komika"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textJ3" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>