<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/background_main_activity"/>

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="match_parent" 
       tools:context=".MainActivity">


       <TextView
           android:id="@+id/main_title"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"

           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent"

           android:layout_marginTop="80dp"

           android:text="EL CAPÍTULO JUSTO"
           android:textSize="40sp"
           android:fontFamily="@font/caslon_antique_bold"
           />

       <com.google.android.material.tabs.TabLayout
           android:id="@+id/tabLayout"
           android:layout_width="match_parent"
           android:layout_height="wrap_content"

           app:layout_constraintTop_toBottomOf="@+id/main_title"

           android:layout_marginTop="28dp"

           app:tabIndicatorColor="#F44336"
           app:tabSelectedTextColor="#F44336"
           app:tabTextColor="#611B15"
           tools:layout_editor_absoluteX="1dp">

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/jugadores_title" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/reglas_title" />

           <com.google.android.material.tabs.TabItem
               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:text="@string/ajustes_title" />

       </com.google.android.material.tabs.TabLayout>

       <androidx.viewpager2.widget.ViewPager2
           android:id="@+id/viewpager"
           android:layout_width="0dp"
           android:layout_height="0dp"

           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintTop_toBottomOf="@+id/tabLayout"
           app:layout_constraintBottom_toTopOf="@+id/startButton"

           android:layout_marginStart="16dp"
           android:layout_marginEnd="16dp"
           />

       <Button
           android:id="@+id/startButton"
           android:layout_width="244dp"
           android:layout_height="93dp"

           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"

           android:layout_marginBottom="80dp"

           android:backgroundTint="#F44336"
           android:fontFamily="@font/komika_bold_italic"
           android:text="@string/startButton"
           android:textSize="24sp"
           />

   </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>